start working on another dataset

--- a/Autoregression.ipynb
+++ b/Autoregression.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyNuOo8+RQmYZzsOgB9p/Kd5",
+      "authorship_tag": "ABX9TyOw8aaOdABNT4ctyD4371ca",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -109,9 +106,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IaN53LpdBuP1",
-        "outputId": "0c338232-6a71-4c91-e919-a74e1861e9cc"
+        "outputId": "7cad73bc-fbad-4e5b-e848-3ce00e84f28c"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +119,7 @@
             "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
             "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
             "remote: Total 74 (delta 0), reused 3 (delta 0), pack-reused 70 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (74/74), 1.12 MiB | 18.20 MiB/s, done.\n",
+            "Receiving objects: 100% (74/74), 1.12 MiB | 15.93 MiB/s, done.\n",
             "['lovecraftcorpus/alchemist.txt', 'lovecraftcorpus/arthur_jermyn.txt', 'lovecraftcorpus/azathoth.txt', 'lovecraftcorpus/beast.txt', 'lovecraftcorpus/beyond_wall_of_sleep.txt', 'lovecraftcorpus/book.txt', 'lovecraftcorpus/celephais.txt', 'lovecraftcorpus/charles_dexter_ward.txt', 'lovecraftcorpus/clergyman.txt', 'lovecraftcorpus/colour_out_of_space.txt', 'lovecraftcorpus/cool_air.txt', 'lovecraftcorpus/crawling_chaos.txt', 'lovecraftcorpus/cthulhu.txt', 'lovecraftcorpus/dagon.txt', 'lovecraftcorpus/descendent.txt', 'lovecraftcorpus/doorstep.txt', 'lovecraftcorpus/dreams_in_the_witch.txt', 'lovecraftcorpus/dunwich.txt', 'lovecraftcorpus/erich_zann.txt', 'lovecraftcorpus/ex_oblivione.txt', 'lovecraftcorpus/festival.txt', 'lovecraftcorpus/from_beyond.txt', 'lovecraftcorpus/gates_of_silver_key.txt', 'lovecraftcorpus/haunter.txt', 'lovecraftcorpus/he.txt', 'lovecraftcorpus/high_house_mist.txt', 'lovecraftcorpus/hound.txt', 'lovecraftcorpus/hypnos.txt', 'lovecraftcorpus/innsmouth.txt', 'lovecraftcorpus/iranon.txt', 'lovecraftcorpus/juan_romero.txt', 'lovecraftcorpus/kadath.txt', 'lovecraftcorpus/lurking_fear.txt', 'lovecraftcorpus/martins_beach.txt', 'lovecraftcorpus/medusas_coil.txt', 'lovecraftcorpus/memory.txt', 'lovecraftcorpus/moon_bog.txt', 'lovecraftcorpus/mountains_of_madness.txt', 'lovecraftcorpus/nameless.txt', 'lovecraftcorpus/nyarlathotep.txt', 'lovecraftcorpus/old_folk.txt', 'lovecraftcorpus/other_gods.txt', 'lovecraftcorpus/outsider.txt', 'lovecraftcorpus/pharoahs.txt', 'lovecraftcorpus/pickman.txt', 'lovecraftcorpus/picture_house.txt', 'lovecraftcorpus/poetry_of_gods.txt', 'lovecraftcorpus/polaris.txt', 'lovecraftcorpus/randolph_carter.txt', 'lovecraftcorpus/rats_walls.txt', 'lovecraftcorpus/reanimator.txt', 'lovecraftcorpus/redhook.txt', 'lovecraftcorpus/sarnath.txt', 'lovecraftcorpus/shadow_out_of_time.txt', 'lovecraftcorpus/shunned_house.txt', 'lovecraftcorpus/silver_key.txt', 'lovecraftcorpus/street.txt', 'lovecraftcorpus/temple.txt', 'lovecraftcorpus/terrible_old_man.txt', 'lovecraftcorpus/tomb.txt', 'lovecraftcorpus/tree.txt', 'lovecraftcorpus/ulthar.txt', 'lovecraftcorpus/unnamable.txt', 'lovecraftcorpus/vault.txt', 'lovecraftcorpus/what_moon_brings.txt', 'lovecraftcorpus/whisperer.txt', 'lovecraftcorpus/white_ship.txt']\n",
             "Corpus downloaded.\n"
           ]
@@ -135,7 +132,7 @@
       "metadata": {
         "id": "sLNw0liU8iuT"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +141,7 @@
       "metadata": {
         "id": "czmqXthL8aTY"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +171,7 @@
         },
         "outputId": "09893f1b-2bc2-42e8-8e76-c6dbbf6e4726"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +205,7 @@
         "id": "n9YifWZd8wu0",
         "outputId": "22dc84c5-e844-4c32-999b-6ffdd1cafcc2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +258,7 @@
       "metadata": {
         "id": "FpPokyGL8t_r"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -282,7 +279,7 @@
         "id": "z8QaNeuL70-j",
         "outputId": "c8bdbddb-4409-41aa-bbfd-87846c3c6758"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +372,7 @@
       "metadata": {
         "id": "aF86Ta92YmGy"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +424,7 @@
         "id": "-S3saQ4_AZKa",
         "outputId": "c9c27a3b-d2b4-4959-d130-e65f703d2091"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -674,7 +671,7 @@
         "id": "dZL7fWGS_PJv",
         "outputId": "58e39bc0-9884-4fa1-bb33-b6cf2d7f3c7b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1005,7 +1002,7 @@
         "id": "trr87976_g0_",
         "outputId": "32888070-9aa6-4476-b200-a6f3614e0d26"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1047,7 +1044,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1084,89 @@
         "shutil.copytree(path, output_folder, dirs_exist_ok=True)"
       ],
       "metadata": {
-        "id": "rT-eC6WwOu2z"
+        "id": "rT-eC6WwOu2z",
+        "outputId": "79221874-b7f7-4ab1-c50e-e8c408621535",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.7), please consider upgrading to the latest version (0.3.8).\n",
+            "✅ Dataset downloaded and saved in: /root/.cache/kagglehub/datasets/divyansh22/friends-tv-show-script/versions/1\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/friends_scripts'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "path"
+      ],
+      "metadata": {
+        "id": "KZcKYJI_IrF1",
+        "outputId": "d2f1c19e-7fef-46d2-f3cd-32d9e6c2b2ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/root/.cache/kagglehub/datasets/divyansh22/friends-tv-show-script/versions/1'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# read files\n",
+        "\n",
+        "path =\n",
+        "\n",
+        "\n",
+        "# standardize\n",
+        "\n",
+        "\n",
+        "#split 80 to 20 for validatoin\n",
+        "\n",
+        "# create two files ,from one file which containts all scripts\n",
+        "\n",
+        "# make folders for train and validation and copy files\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Indb08cfH3Vl"
       },
       "execution_count": null,
       "outputs": []
@@ -1096,7 +1175,96 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
+        "id": "Kl2GanoQIIDg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Where the text files are going to live.\n",
+        "dataset_path = \"dataset\"\n",
+        "dataset_path_all = os.path.join(dataset_path, \"all\")\n",
+        "dataset_path_train = os.path.join(dataset_path, \"train\")\n",
+        "dataset_path_valid = os.path.join(dataset_path, \"valid\")\n",
+        "\n",
+        "# Just use 20 files.\n",
+        "file_number = 20\n",
+        "\n",
+        "# Gather the corpus if it has not been gathered yet.\n",
+        "if not os.path.exists(dataset_path):\n",
+        "\n",
+        "    # Create all the folders.\n",
+        "    for path in [dataset_path, dataset_path_all, dataset_path_train, dataset_path_valid]:\n",
+        "        if not os.path.exists(path):\n",
+        "            os.mkdir(path)\n",
+        "\n",
+        "    # Clone the repo.\n",
+        "    !git clone https://github.com/vilmibm/lovecraftcorpus\n",
+        "\n",
+        "    # Find all the files.\n",
+        "    paths_all = glob.glob(\"lovecraftcorpus/*.txt\")\n",
+        "    print(sorted(paths_all))\n",
+        "\n",
+        "    # Standardize.\n",
+        "    for path in paths_all:\n",
+        "        content = open(path).read()\n",
+        "        content = content.lower()\n",
+        "        for punctuation in \".,:;?!\":\n",
+        "            content = content.replace(punctuation, \" \" + punctuation)\n",
+        "        open(path, \"w\").write(content)\n",
+        "\n",
+        "    # Do not use all.\n",
+        "    paths_all = paths_all[:file_number]\n",
+        "\n",
+        "    # Split 80/20.\n",
+        "    split_index = int(len(paths_all) * 0.8)\n",
+        "    paths_train = paths_all[:split_index]\n",
+        "    paths_valid = paths_all[split_index:]\n",
+        "\n",
+        "    # Copy files.\n",
+        "    def copy(paths, destination):\n",
+        "        for path in paths:\n",
+        "            shutil.copy2(path, destination)\n",
+        "    copy(paths_all, dataset_path_all)\n",
+        "    copy(paths_train, dataset_path_train)\n",
+        "    copy(paths_valid, dataset_path_valid)\n",
+        "\n",
+        "    # Delete repo.\n",
+        "    !rm -rf lovecraftcorpus\n",
+        "\n",
+        "    # Done.\n",
+        "    print(\"Corpus downloaded.\")"
+      ],
+      "metadata": {
         "id": "NZ3U3kXkOu0o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_size  = 32  # not for SGD! This is a different batch size.\n",
+        "seed = 667\n",
+        "\n",
+        "def create_dataset(dataset_path):\n",
+        "    dataset = preprocessing.text_dataset_from_directory(\n",
+        "        dataset_path,\n",
+        "        labels=None,\n",
+        "        batch_size=batch_size,\n",
+        "        seed=seed\n",
+        "    )\n",
+        "    return dataset\n",
+        "dataset_original_all = create_dataset(dataset_path_all)\n",
+        "dataset_original_train = create_dataset(dataset_path_train)\n",
+        "dataset_original_valid = create_dataset(dataset_path_valid)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "anutUtKMHnnf"
       },
       "execution_count": null,
       "outputs": []
